[package]
name = "loop-rs"
version = "0.7.0"
authors = ["Rich Jones <miserlou@gmail.com>", "Felix Obenhuber <felix@obenhuber.de>"]
description = "UNIX's missing loop command"
edition = "2021"

documentation = "https://github.com/Miserlou/Loop"
homepage = "https://github.com/Miserlou/Loop"
repository = "https://github.com/Miserlou/Loop"

readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
humantime = "2"
portable-pty = "0.9"
regex = "1"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std", "time", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
assert_cmd = "2"

[[bin]]
name = "loop"
path = "src/main.rs"
